# agent-monitor-embedded-system

./: .gitignore  CMakeLists.txt  README.md  main.cpp
docs/: adr.md  breadboard_layout.md  design_doc.md  dev_log.md  roadmap.md  test_doc.md
docs/phase_docs/: phase_01_hardware_verification.md  phase_02_graphics_foundation.md  phase_03_performance_optimization.md  phase_04_information_layer.md  phase_05_communication_layer.md  phase_06_application_logic.md  phase_07_advanced_ui_components.md  phase_08_interrupt_architecture.md  phase_09_power_management.md
include/: button.h  display.h  font.h  protocol.h  ring_buffer.h  ui.h  ui_config.h
src/: button.cpp  display.cpp  font.cpp  main.cpp  protocol.cpp  ring_buffer.cpp  ui.cpp
tests/: CMakeLists.txt  test_font.cpp  test_framework.h  test_protocol.cpp  test_ring_buffer.cpp  test_runner.cpp  test_ui.cpp
tests/mocks/: mock_display.cpp  mock_peripherals.cpp  tusb.h
tests/mocks/hardware/: gpio.h  spi.h  sync.h  timer.h
tests/mocks/pico/: stdlib.h  time.h
tools/: agent_stream.py
